# manim-cs

./: pyproject.toml
src/manim_cs/: MBits.py  __init__.py
